--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "4.3.3",
-    "@material-ui/icons": "4.2.1",
     "axios": "0.19.0",
-    "global": "4.4.0",
     "prop-types": "15.7.2",
     "react": "16.9.0",
     "react-dom": "16.9.0",
@@ -28,12 +26,13 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "repository": "git@github.com:dotmaike/calendar-games-magnoliga7.git",
-  "author": "Miguel Murillo <miguel_murillo@epam.com>",
+  "repository": "git@github.com:dotmaike/next-games.git",
+  "author": "Miguel Murillo <miguel.murillo.cbs@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "eslint": "6.2.2",
     "eslint-config-airbnb": "18.0.1",
+    "eslint-config-prettier": "^6.1.0",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.14.3"
